--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
     font-family: 'Playfair Display', serif;
 }
 
+#sidebar {
+    border-color: aquamarine;
+    border-style: solid;
+    border-width: 2px;
+}
+
+#container {
+    border-color: aquamarine;
+    border-style: solid;
+    border-width: 2px;
+}
+
 body {
     font-family: 'Playfair Display', serif;
 }
@@ -15,10 +27,6 @@ h1, h2, ul, li {
 
 @media (min-width: 600px) {
     #container {
-        border-color: aquamarine;
-        border-style: solid;
-        border-width: 2px;
-        font-family: 'Playfair Display', serif;
         display: flex;
     }
 
